# uav_neo_ros2_driver

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: edgetpu.yaml  gamepad.yaml  mavros_pluginlists.yaml  mavros_px4.yaml  mux.yaml  realsense_d435i.yaml  shape.yaml  xbox_mapping.yaml
docs/: changelog.md  coral-m2-migration.md  drone-tool-plan.md  features.md  mavros_topics.md  realsense_topics.md  shape_node.md  topic_bandwidth.md  tuning_guide.md
launch/: arducam.launch.py  edgetpu.launch.py  mavros.launch.py  mux.launch.py  realsense.launch.py  shape.launch.py  teleop.launch.py
notebooks/: hardware_bringup_test.ipynb
scripts/: 99-coral-edgetpu.rules  99-uav-cameras.rules  dashboard.py  drone-tool.sh  gasket-msi-fallback.patch  gscam_crash_capture.sh  image_relay.py  install_ros2_jazzy.sh  launch_shape.sh  launch_teleop.sh  patch_gscam.sh  reset_networking.sh  setup_all.sh  setup_arducam.sh  setup_controller.sh  setup_coral.sh  setup_networking.sh  setup_pixhawk.sh  setup_realsense.sh  setup_services.sh  setup_shape_service.sh  uav-dashboard.service  uav-jupyter.service  uav-shape.service.in  uav-teleop.service  uav-watchdog.service  watchdog.py
scripts/modprobe.d/: blacklist-hid-nintendo.conf
test/: test_copyright.py  test_flake8.py  test_hardware.py  test_pep257.py
uav_neo_ros2_driver/: controller_mapping.py  edgetpu_node.py  gamepad.py  mux_node.py  shape_node.py
