<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_neo_ros2_driver</name>
  <version>1.4.0</version>
  <description>ROS2 driver for UAV Neo</description>
  <maintainer email="uav@todo.todo">uav</maintainer>
  <license>GPL-3.0-or-later</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>gscam</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
